all heading converted in h2 and h4 tags

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <div class="collection-radial-effects">
             <div class="container">
                 <div class="collection-box-header">
-                    <span class="span-1">Our</span>
-                    <span class="span-2">Shop</span>
+                    <h4 class="span-1">Our</h4>
+                    <h4 class="span-2">Shop</h4>
                 </div>
                 <div class="collection-box">
                     <div class="collection-box-left">
@@ -349,7 +349,7 @@
     <div class="section-designers">
         <div class="container">
             <div class="designers-header">
-                <p>designer</p>
+                <h4>designer</h4>
             </div>
         </div>
         <div class="designer-names-box">
@@ -392,7 +392,7 @@
                     <img src="image/brush.png">
                 </div>
                 <div class="newsletter-col-row-2">
-                    <p>join our newsletter</p>
+                    <h4>join our newsletter</h4>
                 </div>
                 <div class="newsletter-col-row-3">
                     <input type="text" id="your-email" name="your-email" value="your-email">
